<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EE"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_adapter"
        android:weightSum="100"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="66.6"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.3"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Book_Name"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/extraContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_contact"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>