<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EE"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_adapter"
        android:weightSum="100"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="66.6"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.3"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Book_Name"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/Price"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="40dp">

                <ImageButton
                    android:id="@+id/cancelTranX"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_transaction"
                    android:src="@drawable/trans_cancel"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/finishTranX"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/trans_finish"
                    android:scaleType="fitCenter"
                    android:background="@null"
                    android:text="@string/finish"
                    android:layout_marginStart="40dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>