<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EE"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_adapter"
        android:weightSum="100"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="66.6"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.3"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Book_Name"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textAlignment="viewStart"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:textAlignment="viewStart" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>