<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EE"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="5dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_adapter"
        android:weightSum="100"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="66.6"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.3"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Book_Name"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:paddingBottom="10dp"/>

            <ImageButton
                android:id="@+id/deleteBook"
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:background="@drawable/delete_bin"
                android:paddingBottom="20dp"
                android:scaleType="fitCenter"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>